@@ -916,3 +916,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
          theoretically be saved separately (patch #3596469) (Fred).
 20121225 accessor.pl,libspectrum.h.in,sna.c,snap_accessors.txt,snapshot.c,szx.c,
          z80.c: extend SZX support to version 1.5 draft specs (Fred).
+20121226 accessor.pl,snap_accessors.txt,snapshot.c,szx.c: MEMPTR is also in v1.4
+         SZX files (Fred).
